        can be configured through ZCML (see
        Products/PageTemplates/(configure.zcml, unicodeconflictresolver.py,
        interfaces.py)

      - AccessControl.Role: added new method
        manage_getUserRolesAndPermissions().

      - AccessControl: the form behind the "Security" tab has a new form
        for user-related reporting of permissions and roles

    Bugs Fixed

      - Collector #2304: fixed markup issue in ptEdit.zpt

      - Collector #2260: fixed bug in Examples package

      - Collector #2320: HTTPResponse setHeader lowercased keys but getHeader
        did not, causing lookups of 'Content-Type' to fail

      - Collector #2307: ObjectCopiedEvent not dispatched to sublocations.

      - Collector #2298: webdav.Resource.COPY and webdav.Resource.MOVE did
        not send the expected copy/move events.

      - Collector #2296: Fixed import of ZClass products, broken by removal
        of BBB support for pasting objects whose meta_type info was
        permission-free.

      - Collector #2294: Protected DOS-able ControlPanel methods with the
        same 'requestmethod' wrapper.

      - Collector #2294: Protected various security mutators with a new
        'postonly' decorator.  The decorator limits method publishing to
        POST requests only, and is a backport from Zope 2.11's requestmethod
        decorator factory.

      - Collector #2289: restored compatiblity with PTProfiler

      - No longer opens a zodb connection every time a ProductDispatcher
        is looked up.

      - PageTemplate/ZRPythonExpr.py: expressions represented as unicode string
        caused UnicodeDecodeErrors.

      - PluginIndexes: Fixed 'parseIndexRequest' for false values.

      - Collector #2269: fixed broken ZPT FTP support

      - Collector #2261: Acquisition when creating objects via Webdav.

      - Collector #2263: 'field2ulines' did not convert empty string
        correctly.
